# flask-practice

./: Pipfile  run.cmd
dhl/: .gitignore  Pipfile  __init__.py  models.py  pyproject.toml  requirements.txt  run.cmd  set-env.cmd  test_app.py
dhl/common/: common_function.py
dhl/dhl/: __init__.py  models.py
dhl/dhl.egg-info/: PKG-INFO  SOURCES.txt
dhl/dhl/common/: common_function.py
dhl/dhl/repository/: order_repository.py
dhl/dhl/service/: dto.py  scheduler.py  shipping_tracking_service.py
dhl/dhl/test/: scheduler_test.py  shipping_tracking_service_test.py
dhl/dhl/views/: main_views.py
dhl/migrations/versions/: 7092e7cbcad0_.py
dhl/service/: manage_shipping_tracking.py  shipping_tracking_service.py
dhl/test/: manage_shipping_tracking_test.py  shipping_tracking_service_test.py
dhl/views/: main_views.py
