[project]
name = "dhl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "blinker==1.9.0",
    "certifi==2025.4.26",
    "charset-normalizer==3.4.2",
    "click==8.2.1",
    "colorama==0.4.6",
    "flask==3.1.1",
    "flask-migrate>=4.1.0",
    "flask-sqlalchemy==3.1.1",
    "greenlet==3.2.2",
    "idna==3.10",
    "iniconfig==2.1.0",
    "itsdangerous==2.2.0",
    "jinja2==3.1.6",
    "markupsafe==3.0.2",
    "packaging==25.0",
    "pluggy==1.6.0",
    "pymysql==1.1.1",
    "pytest==8.3.5",
    "requests==2.32.3",
    "sqlalchemy==2.0.41",
    "typing-extensions==4.13.2",
    "urllib3==2.4.0",
    "werkzeug==3.1.3",
]
